# obts-sipauthserve

./: CMakeLists.txt  README.md
apps/: SubscriberRegistry.h  servershare.cpp  sipauthserve.cpp
libosip2-5.3.1/src/test/res/: sip-malformed22
subscriber_registry/: CMakeLists.txt  SubscriberRegistry.cpp  SubscriberRegistry.h
test.SubscriberRegistry/: CMakeLists.txt  test.cpp
